[package]
name = "automerge-c"
version = "0.2.2"
authors = ["Orion Henry <orion.henry@gmail.com>", "Jason Kankiewicz <jason.kankiewicz@gmail.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.80.0"

[lib]
name = "automerge_core"
crate-type = ["staticlib"]
bench = false
doc = false

[dependencies]
automerge = { path = "../automerge" }
hex = "^0.4.3"
libc = "^0.2"
smol_str = "0.3"

[build-dependencies]
cbindgen = "^0.29"
