[package]
name = "automerge-cli"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2021"
license = "MIT"
rust-version = "1.80.0"

[[bin]]
name = "automerge"
path = "src/main.rs"
bench = false
doc = false

[dependencies]
clap = {version = "~4", features = ["derive"]}
serde_json = "^1.0"
anyhow = "1.0"
thiserror = "^2.0"
combine = "^4.5"
maplit = "^1.0"
tracing-subscriber = "~0.3"

automerge = { path = "../automerge" }
termcolor = "1.1.3"
serde = "1.0"

[dev-dependencies]
duct = "^1.0"
