[package]
name = "automerge-test"
version = "0.4.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/automerge/automerge"
rust-version = "1.57.0"
description = "Utilities for testing automerge libraries"

[dependencies]
automerge = { version = "1.0.0-pre", path = "../automerge" }
smol_str = { version = "0.2", features=["serde"] }
serde = { version = "^1.0", features=["derive"] }
decorum = "0.3.1"
serde_json = { version = "^1.0.73", features=["float_roundtrip"], default-features=true }
