[package]
name = "automerge-test"
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/automerge/automerge"
rust-version = "1.73.0"
description = "Utilities for testing automerge libraries"

[dependencies]
automerge = { version = "1.0.0-beta.6", path = "../automerge" }
smol_str = { version = "0.3", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
decorum = "0.4.0"
serde_json = { version = "^1.0.73", features = [
    "float_roundtrip",
], default-features = true }
