# You must change these to your own details.
[package]
name = "automerge-wasm"
description = "An js/wasm wrapper for the rust implementation of automerge-backend"
repository = "https://github.com/automerge/automerge"
version = "0.1.0"
authors = [
    "Alex Good <alex@memoryandthought.me>",
    "Orion Henry <orion@inkandswitch.com>",
    "Martin Kleppmann",
]
categories = ["wasm"]
readme = "README.md"
edition = "2021"
license = "MIT"
rust-version = "1.80.0"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[features]
# default = ["console_error_panic_hook", "wee_alloc"]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "^0.1", optional = true }
# wee_alloc = { version = "^0.4", optional = true }
automerge = { path = "../automerge", features = ["wasm", "utf16-indexing"] }
js-sys = "^0.3"
serde = "^1.0"
serde_json = "^1.0"
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11.5"
hex = "^0.4.3"
itertools = "0.14.0"
thiserror = "^2.0.12"
rustc-hash = "^2.1.1"

[dependencies.wasm-bindgen]
version = "= 0.2.108"
features = ["serde-serialize", "std"]

[package.metadata.wasm-pack.profile.release]
# wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[dev-dependencies]
proptest = { version = "^1.0.0", default-features = false, features = ["std"] }
wasm-bindgen-futures = "^0.4"
wasm-bindgen-test = "^0.3"
