[package]
name = "automerge"
version = "0.7.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/automerge/automerge"
rust-version = "1.89.0"
description = "A JSON-like data structure (a CRDT) that can be modified concurrently by different users, and merged again automatically"
readme = "./README.md"

[features]
optree-visualisation = ["dot"]
wasm = ["js-sys", "wasm-bindgen", "web-sys", "getrandom/wasm_js", "hexane/wasm"]
utf8-indexing = []
utf16-indexing = []

[dependencies]
hexane = { version = "0.1.5", path = "../hexane" }
hex = "^0.4.3"
leb128 = "^0.2.5"
sha2 = "0.11.0-pre.5"
thiserror = "^2.0.12"
itertools = "0.14.0"
flate2 = "^1.0.22"
smol_str = { version = "0.3", features = ["serde"] }
tracing = { version = "^0.1.29" }
rustc-hash = "^2.1.1"
tinyvec = { version = "^1.5.1", features = ["alloc"] }
serde = { version = "^1.0", features = ["derive"] }
cfg-if = "1.0"
getrandom = "0.3"

# optional deps
dot = { version = "0.1.4", optional = true }
js-sys = { version = "^0.3", optional = true }
wasm-bindgen = { version = "^0.2", optional = true }
rand = { version = "^0.9", optional = false, features = ["small_rng"] }

unicode-segmentation = "1.10.1"

[dependencies.web-sys]
version = "^0.3.55"
features = ["console"]
optional = true

[dev-dependencies]
pretty_assertions = "1.0.0"
proptest = { version = "^1.7.0", default-features = false, features = ["std"] }
serde_json = { version = "^1.0.73", features = [
    "float_roundtrip",
], default-features = true }
maplit = { version = "^1.0" }
criterion = "0.7"
test-log = { version = "0.2.10", features = [
    "trace",
], default-features = false }
tracing-subscriber = { version = "^0.3", features = ["fmt", "env-filter"] }
automerge-test = { path = "../automerge-test" }
prettytable = "0.10.0"

[[bench]]
name = "range"
harness = false

[[bench]]
name = "map"
harness = false

[[bench]]
name = "sync"
harness = false

[[bench]]
name = "load_save"
harness = false
