[package]
name = "hexane"
version = "0.1.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/automerge/automerge"
rust-version = "1.80.0"
description = "A columnar compression library used by automerge"
readme = "./README.md"

[lib]
bench = false


[features]
wasm = ["web-sys"]

[dependencies]
leb128 = "^0.2.5"
thiserror = "^2.0.12"

[dev-dependencies]
proptest = { version = "^1.7", default-features = false, features = ["std"] }
rand = { version = "^0.9", optional = false, features = ["small_rng"] }
divan = "0.1.15"

[profile.release]
debug = true

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "splice"
harness = false

[[bench]]
name = "seek"
harness = false

[dependencies.web-sys]
version = "^0.3.55"
features = ["console"]
optional = true
