[package]
name = "hexane"
version = "1.0.0-alpha.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/automerge/automerge"
rust-version = "1.80.0"
description = "A columnar compression library used by automerge"
readme = "./README.md"

[lib]
bench = false


[features]
wasm = ["web-sys"]
slow_path_assertions = []


[dependencies]
leb128 = "^0.2.5"
thiserror = "^2.0.12"

[dev-dependencies]
proptest = { version = "^1.7", default-features = false, features = ["std"] }
rand = { version = "^0.10", optional = false }
divan = "0.1.15"

[profile.release]
debug = true

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "splice"
harness = false

[[bench]]
name = "seek"
harness = false

[[bench]]
name = "v0_vs_v1"
harness = false

[[bench]]
name = "max_segments"
harness = false

[[bench]]
name = "profile_bool_replace"
harness = false

[[bench]]
name = "column_u64_mutations"
harness = false

[[bench]]
name = "btree_b_sweep"
harness = false

[[bench]]
name = "encode_unless"
harness = false

[dependencies.web-sys]
version = "^0.3.55"
features = ["console"]
optional = true
