[package]
name = "hexane"
version = "1.0.0-alpha.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/automerge/automerge"
rust-version = "1.90.0"
description = "A columnar compression library used by automerge"
readme = "./README.md"

[lib]
bench = false


[features]
wasm = ["web-sys"]
slow_path_assertions = []
bijou64 = ["dep:bijou64"]


[dependencies]
leb128 = "^0.2.5"
thiserror = "^2.0.12"
bijou64 = { version = "^0.2.1", optional = true }

[dev-dependencies]
proptest = { version = "^1.7", default-features = false, features = ["std"] }
rand = { version = "^0.10", optional = false }
divan = "0.1.15"

[profile.release]
debug = true

[[bench]]
name = "column_ops"
harness = false

[[bench]]
name = "load"
harness = false

[[bench]]
name = "max_segments"
harness = false

[[bench]]
name = "profile_bool_replace"
harness = false

[[bench]]
name = "column_u64_mutations"
harness = false

[[bench]]
name = "btree_b_sweep"
harness = false

[[bench]]
name = "remap"
harness = false

[[bench]]
name = "seek_to_value"
harness = false

[[bench]]
name = "codec_compare"
harness = false
required-features = ["bijou64"]

[dependencies.web-sys]
version = "^0.3.55"
features = ["console"]
optional = true
