[package]
name = "load-trace"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
automerge = { path = "../automerge" }
criterion = "0.4.0"
itertools = "0.11.0"
jemalloc-ctl = "0.5.4"
jemallocator = "0.5.4"
json = "0.12.4"
rand = "^0.8"


[[bin]]
name = "load-trace"
doc = false
bench = false

[[bench]]
debug = true
name = "main"
harness = false

